Fix links overlapping

--- a/rocks/css/default.css
+++ b/rocks/css/default.css
@@ -22,6 +22,7 @@ a {
   font-family: courier;
   background-color: black;
   padding: 0.5em;
+  line-height: 3em;
   border-radius: 0.2em;
 }
 
